Proyecto2/k8s/RutaRust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-ruta
  namespace: kafka
spec:
  selector:
    matchLabels:
      role: rust-ruta
  replicas: 1
  template:
    metadata:
      labels:
        role: rust-ruta

    spec:
      containers:
      - name: rust-cliente
        image: bekinggo/app_cliente 
        ports:
        - containerPort: 8000
      - name: rust-server
        image: bekinggo/app_server
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-rust
  namespace: kafka
spec:
  type: LoadBalancer
  ports:
  - name: rust-client-port
    port: 8000
    targetPort: 8000
  - name: rust-server-port
    port: 8080
    targetPort: 8080
  selector:
    role: rust-ruta
